--- a/tmpK.html
+++ b/tmpK.html
@@ -39,6 +39,13 @@ H
 </button>
 <br>
 <br>
+<button>
+|
+</button>
+<button>
+\
+</button>
+<br>
 
 <script>
 Array.from(  document.querySelectorAll('button')).map(
@@ -47,3 +54,5 @@ Array.from(  document.querySelectorAll('button')).map(
                      ) 
 ) 
 </script>
+
+
